[package]
name = "zswap-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "zswap"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-ff = { version = "^0.3.0", features = ["std", "asm", "parallel"] }
ark-nonnative-field = { version = "^0.3.0", features = ["std"] }
ark-ec = { version = "^0.3.0", features = ["std", "parallel"] }

ark-bls12-381 = { version = "^0.3.0", features = ["std"] }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs", "std"] }

ark-std = { version = "^0.3.0", features = ["std", "parallel"] }
ark-relations = { version = "^0.3.0", features = ["std"]  }

ark-r1cs-std = { version = "^0.3.0", features = ["std", "parallel"] }
ark-snark = { version = "^0.3.0" }

ark-groth16 = { version = "^0.3.0", features = ["std", "r1cs", "parallel"] }

ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs", "parallel"] }
ark-sponge = { version = "^0.3.0", features = ["r1cs", "std"] }

rand = "^0.8.4"
lazy_static = "^1.4.0"

ecies = "^0.2.1"
log = "^0.4.0"
env_logger = "^0.9.0"
tracing = "^0.1.29"
tracing-subscriber = "^0.2.25"

[patch.crates-io]
# Bring forward compression functions over fields from next arkworks release.
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "mainbench"
path = "bench/mainbench.rs"
harness = false